# techstack

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  build-binary.sh  build.sh  config.yml.tpl  go.mod  go.sum  main.go  systemd.service
.github/workflows/: build.yml
cmd/techstacktools/: main.go
command/: command.go  daemon.go  version.go
command/service/: path.go  path_win.go  service.go  service_install.go  service_run.go  service_start.go  service_stop.go  service_uninstall.go
daemon/: daemon.go
daemon/service/: manager.go  service.go
docs/: README.md  development-plan.md  roadmap.md
global/: config.go  const.go  const_nowindows.go  const_windows.go  init.go  model.go
httpd/: common.go  handler_library.go  handler_public.go  handler_repo.go  handler_task.go  handler_user.go  handler_user_repo.go  middleware.go  router.go  server.go  server_export.go  server_user.go  service_mail.go  service_user.go
httpd/bind/: model.go  query.go  user.go
httpd/buserr/: const.go  errors.go
httpd/dao/: dao.go  library.go  query.go  repo.go  repo_tools.go  setting.go  task.go  user.go
model/: base.go  common.go  t_bg_task.go  t_libraries.go  t_repo.go  t_setting.go  t_user.go  t_user_key.go  t_user_repo.go
pydata/: fetch-crateio2duck.py  fetch-gomod2duck-v1.py  fetch-gomod2duck.py  import-crates-from-duckdbt-to-serverdb.sh  pyproject.toml
utils/: fs.go  ip.go  maps.go  md5.go  slice.go  strings.go  struct.go  time.go  utils.go  x509.go  yaml.go
web/: chunk-0s9k62fn.js  chunk-t3p41wrm.css  index.html
(+61 files in other folders)
